--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Yasir",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
     "express": "^4.17.1",
@@ -18,6 +19,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
+    "request": "^2.88.2",
     "requests": "^0.3.0"
   },
   "devDependencies": {
